--- a/WebContent/shop.html
+++ b/WebContent/shop.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-        <title>LFT Supplier Main Page</title>
+        <title>Legal Future Technology Wholesaler Supplier Main Page</title>
 </head>
 <body>
-<h1 align="center">Welcome to the worlds only Legal Future Tech supplier.</h1>
+<h1 align="center">Welcome to the Worlds only Legal Future Technology Wholesale.</h1>
 
-<h2 align="center"><a href="listprod.jsp">Begin Shopping</a></h2>
+<h2 align="center"><a href="listprod.jsp">Start Browsing</a></h2>
 
-<h2 align="center"><a href="listorder.jsp">List All Orders</a></h2>
+<h2 align="center"><a href="listorder.jsp">View Previous Orders</a></h2>
 
 </body>
 </head>
-
 
